--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Oh my food</title>
         <meta name="description" content="Les menus de vos restaurants préférés." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" type="favicon.ico" href="favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="summary">
@@ -16,7 +16,7 @@
         <!-- Open Graph data -->
         <meta property="og:title" content="Oh my food" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://lyxiae.github.io/" />
+        <meta property="og:url" content="http://lyxiae.com/ohymyfood" />
         <meta property="og:image" content="photo_oc2.png" />
         <meta property="og:description" content="Les menus de vos restaurants préférés." />
 
@@ -78,14 +78,14 @@
                 </div>
             </a>
             <section id="prochainement">
-                <a href="pages\prochainement.html">
+                <a href="pages/prochainement.html">
                     <div class="block-prochainement">Prochainement</div>
                 </a>
             </section>
         </main>
         <footer>
-            <a class="links-wiggle" href="pages\mentions_legales.html">Mentions légales</a>
-            <a class="links-wiggle" href="mailto:contact@ohmyfood.com" alt="Nous contacter par email">Contactez-nous</a>
+            <a class="links-wiggle" target="_blank" href="pages\mentions_legales.html">Mentions légales</a>
+            <a class="links-wiggle" target="_blank" href="mailto:contact@ohmyfood.com" title="Nous contacter par email">Contactez-nous</a>
         </footer>
         
     </body>
