Fixes Mentorat 7 avril
- Remplacement de police
- Retrait des background-clip non préfixés
- Fix de l'overlap du footer (flex)
- Ajout du lien d'index sur le logo
- Refonte de l'encart "prochainement" (ajout des points animés, retrait du lien vers la page prochainement)
- Retrait de la div inutile en en-tête des menus (sauf pour le premier menu)
- Fix du lien des mentions légales sur toutes les pages.
- Fix du soulignage d'un des sous-titres d'un menu.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- FONTS-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cantata+One&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
 
     <body>
         <header>
-            <h1>ohmyfood</h1>
+            <a href="index.html"><h1>ohmyfood</h1></a>
         </header>
         <main>
             <a href="pages/menu_note.html">
@@ -78,13 +78,17 @@
                 </div>
             </a>
             <section id="prochainement">
-                <a href="pages/prochainement.html">
-                    <div class="block-prochainement">Prochainement</div>
-                </a>
+                <div class="block-prochainement">Prochainement 
+                    <div class="dots-anim">
+                        <div class="dot dot-1">.</div>
+                        <div class="dot dot-2">.</div>
+                        <div class="dot dot-3">.</div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer>
-            <a class="links-wiggle" target="_blank" href="pages\mentions_legales.html">Mentions légales</a>
+            <a class="links-wiggle" href="./pages/mentions_legales.html">Mentions légales</a>
             <a class="links-wiggle" target="_blank" href="mailto:contact@ohmyfood.com" title="Nous contacter par email">Contactez-nous</a>
         </footer>
         
