--- a/pages/menu_palette.html
+++ b/pages/menu_palette.html
@@ -26,7 +26,7 @@
 
         <!-- FONTS-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cantata+One&display=swap" rel="stylesheet">
@@ -41,14 +41,12 @@
 
     <body>
         <header>
-            <h1>ohmyfood</h1>
+            <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
         <main>
             <h1>La palette du goût</h1>
             <section class="menu menu--palette">
-                <div class="menu-heading">
-                    <h2 class="block-menu__heading block-menu__heading--var4">La palette du goût</h2>
-                </div>
+                <h2 class="block-menu__heading block-menu__heading--var4 menu-heading">La palette du goût</h2>
                 <div class="menu-second-heading">
                     <h3>Esquisse</h3>
                 </div>
@@ -103,7 +101,7 @@
             </section>
         </main>
         <footer>
-            <a class="links-wiggle" href="pages/mentions_legales.html">Mentions légales</a>
+            <a class="links-wiggle" href="../pages/mentions_legales.html">Mentions légales</a>
             <a class="links-wiggle" href="mailto:contact@ohmyfood.com" alt="Nous contacter par email">Contactez-nous</a>
         </footer>
         
