--- a/pages/mentions_legales.html
+++ b/pages/mentions_legales.html
@@ -26,7 +26,7 @@
 
         <!-- FONTS-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cantata+One&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
 
     <body>
         <header>
-            <h1>ohmyfood</h1>
+            <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
         <main>
             Mentions légales
