fix title in links

--- a/pages/menu_delice.html
+++ b/pages/menu_delice.html
@@ -26,7 +26,7 @@
 
         <!-- FONTS-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cantata+One&display=swap" rel="stylesheet">
@@ -41,12 +41,14 @@
 
     <body>
         <header>
-            <a href="../index.html"><h1>ohmyfood</h1></a>
+            <h1>ohmyfood</h1>
         </header>
         <main>
             <h1>Le délice des papilles</h1>
             <section class="menu menu--delice">
-                <h2 class="block-menu__heading block-menu__heading--var3 menu-heading">Le délice des papilles</h2>
+                <div class="menu-heading">
+                    <h2 class="block-menu__heading block-menu__heading--var3">Le délice des papilles</h2>
+                </div>
                 <div class="menu-second-heading menu-second-heading--var1">
                     <h3>Pour bien commencer</h3>
                 </div>
@@ -101,8 +103,8 @@
             </section>
         </main>
         <footer>
-            <a class="links-wiggle" href="../pages/mentions_legales.html">Mentions légales</a>
-            <a class="links-wiggle" href="mailto:contact@ohmyfood.com" alt="Nous contacter par email">Contactez-nous</a>
+            <a class="links-wiggle" href="pages/mentions_legales.html">Mentions légales</a>
+            <a class="links-wiggle" href="mailto:contact@ohmyfood.com" title="Nous contacter par email">Contactez-nous</a>
         </footer>
         
     </body>
