--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Oh my food</title>
         <meta name="description" content="Les menus de vos restaurants préférés." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="shortcut icon" type="favicon.ico" href="favicon.ico" />
 
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="summary">
@@ -16,7 +16,7 @@
         <!-- Open Graph data -->
         <meta property="og:title" content="Oh my food" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://lyxiae.com/ohymyfood" />
+        <meta property="og:url" content="http://lyxiae.github.io/" />
         <meta property="og:image" content="photo_oc2.png" />
         <meta property="og:description" content="Les menus de vos restaurants préférés." />
 
@@ -26,7 +26,7 @@
 
         <!-- FONTS-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cantata+One&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
 
     <body>
         <header>
-            <a href="index.html"><h1>ohmyfood</h1></a>
+            <h1>ohmyfood</h1>
         </header>
         <main>
             <a href="pages/menu_note.html">
@@ -78,18 +78,14 @@
                 </div>
             </a>
             <section id="prochainement">
-                <div class="block-prochainement">Prochainement 
-                    <div class="dots-anim">
-                        <div class="dot dot-1">.</div>
-                        <div class="dot dot-2">.</div>
-                        <div class="dot dot-3">.</div>
-                    </div>
-                </div>
+                <a href="pages\prochainement.html">
+                    <div class="block-prochainement">Prochainement</div>
+                </a>
             </section>
         </main>
         <footer>
-            <a class="links-wiggle" href="./pages/mentions_legales.html">Mentions légales</a>
-            <a class="links-wiggle" target="_blank" href="mailto:contact@ohmyfood.com" title="Nous contacter par email">Contactez-nous</a>
+            <a class="links-wiggle" href="pages\mentions_legales.html">Mentions légales</a>
+            <a class="links-wiggle" href="mailto:contact@ohmyfood.com" title="Nous contacter par email">Contactez-nous</a>
         </footer>
         
     </body>
