--- a/pages/prochainement.html
+++ b/pages/prochainement.html
@@ -52,7 +52,7 @@
         </main>
         <footer>
             <a class="links-wiggle" href="pages/mentions_legales.html">Mentions légales</a>
-            <a class="links-wiggle" href="mailto:contact@ohmyfood.com" alt="Nous contacter par email">Contactez-nous</a>
+            <a class="links-wiggle" href="mailto:contact@ohmyfood.com" title="Nous contacter par email">Contactez-nous</a>
         </footer>
         
     </body>
