Fix title mentions légales, fix animation dots on hover
Modifications post mentorat du 14/04

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="fr">
 
-    <head lang="fr">
+    <head>
 
         <meta charset="UTF-8">
         <title>Oh my food</title>
@@ -88,7 +88,7 @@
             </section>
         </main>
         <footer>
-            <a class="links-wiggle" href="./pages/mentions_legales.html">Mentions légales</a>
+            <a class="links-wiggle" href="./pages/mentions_legales.html" title="Mentions légales">Mentions légales</a>
             <a class="links-wiggle" target="_blank" href="mailto:contact@ohmyfood.com" title="Nous contacter par email">Contactez-nous</a>
         </footer>
         
