--- a/pages/mentions_legales.html
+++ b/pages/mentions_legales.html
@@ -47,7 +47,7 @@
             Mentions légales
         </main>
         <footer>
-            <a class="links-wiggle" href="pages/mentions_legales.html">Mentions légales</a>
+            <a class="links-wiggle" href="pages/mentions_legales.html" title="Mentions légales">Mentions légales</a>
             <a class="links-wiggle" href="mailto:contact@ohmyfood.com" title="Nous contacter par email">Contactez-nous</a>
         </footer>
         
