Add title on menu links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="index.html"><h1>ohmyfood</h1></a>
         </header>
         <main>
-            <a href="pages/menu_note.html">
+            <a title="Menu La Note Enchantée" href="pages/menu_note.html">
                 <div class="block-menu block-menu--var1">
                     <div class="block-item">
                         <i class="fas fa-music"></i>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </a>
-            <a href="pages/menu_chic.html">
+            <a title="Menu Le chic à la Française" href="pages/menu_chic.html">
                 <div class="block-menu block-menu--var2">
                     <div class="block-item">
                         <h2 class="block-menu__heading block-menu__heading--var2">Le chic à la française</h2>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </a>
-            <a href="pages/menu_delice.html">
+            <a title="Menu Le délice des papilles" href="pages/menu_delice.html">
                 <div class="block-menu block-menu--var3">
                     <div class="block-item">
                         <h2 class="block-menu__heading block-menu__heading--var3">Le délice des papilles</h2>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </a>
-            <a href="pages/menu_palette.html">
+            <a title="Menu La palette du goût" href="pages/menu_palette.html">
                 <div class="block-menu">
                     <div class="block-item">
                         <h2 class="block-menu__heading block-menu__heading--var4">La palette du goût</h2>
